[project]
name = "tasker"
version = "1.1"
description = ""
authors = []
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymongo==4.3.2",
    "pydantic==1.10.2",
    "PyGObject==3.42.2",
]
[project.optional-dependencies]
test = [
    "black==22.10.0",
    "mypy==0.982",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
]
[project.scripts]
#tasker = "command:main"
#[project.gui-scripts]
tasker_gtk = "gtk:app"

[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
follow_imports = "skip"
strict_optional = true

[tool.coverage.run]
branch = true
omit = ["tests/*"]
[tool.coverage.report]
skip_empty = true
show_missing = true
