[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasker"
version = "3.0"
description = ""
authors = []
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymongo<4.6",
    "pydantic<1.11",
    "starlite[jinja]<1.52",
    "uvicorn<0.24"
]
[project.optional-dependencies]
test = [
    "black<23.10",
    "mypy<1.6",
    "pytest<7.5",
    "pytest-cov<4.2",
]
[tool.setuptools.packages.find]
include = ["tasker"]
[project.scripts]
tasker = "command:main"
#[project.gui-scripts]
#tasker-ui = "gui"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
follow_imports = "skip"
strict_optional = true
exclude = [
    "^build/"
]

[tool.pytest.ini_options]
cache_dir = "/tmp/cache"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
[tool.coverage.report]
skip_empty = true
show_missing = true
